fix timer alignment with site brand

--- a/static/styles.css
+++ b/static/styles.css
@@ -44,7 +44,7 @@ footer {
 }
 
 .navbar-nav .nav-item { 
-    margin-left: 0.5rem; 
+    margin-right: 0.5rem; 
 }
 
 #indian-time {
